--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,6 +11,7 @@
             content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
     />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR" rel="stylesheet">
     <title>Smart Mirror</title>
   </head>
   <body>
